2024-06-08T00:35:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9424740016 # 320
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-08
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 666 1136 / 680 1151
* notice: next accum: outdated-unq outdated-all / unq all: 667 1137 / 680 1151
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2024-05-24] / [2024-05-25]

2024-06-07T00:36:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9409748015 # 319
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-07
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 664 1134 / 680 1151
* notice: next accum: outdated-unq outdated-all / unq all: 666 1136 / 680 1151
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-23] / []

2024-06-06T00:34:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9393173054 # 318
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-06
* notice: last 14d: unq all: 4 17
* notice: prev accum: outdated-unq outdated-all / unq all: 663 1132 / 679 1150
* notice: next accum: outdated-unq outdated-all / unq all: 664 1134 / 680 1151
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-22] / [2024-06-05]

2024-06-05T00:34:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9376198862 # 317