@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-27T00:35:44Z",
-  "count" : 2,
+  "timestamp" : "2024-06-09T00:39:43Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
