@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2024-06-08T00:35:49Z",
-  "count_outdated" : 1137,
-  "uniques_outdated" : 667,
+  "timestamp" : "2024-06-09T00:39:43Z",
+  "count_outdated" : 1139,
+  "uniques_outdated" : 668,
   "count" : 1151,
   "uniques" : 680,
   "clones" : [
     {
-      "timestamp": "2024-05-25T00:00:00Z",
+      "timestamp": "2024-05-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 1, 2 ],
       "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
-      "timestamp": "2024-05-26T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2024-05-27T00:00:00Z",
