@@ -1,16 +1,11 @@
 {
-  "count": 13,
+  "count": 11,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2024-05-25T00:00:00Z",
+      "timestamp": "2024-05-26T00:00:00Z",
       "count": 1,
       "uniques": 1
-    },
-    {
-      "timestamp": "2024-05-26T00:00:00Z",
-      "count": 2,
-      "uniques": 2
     },
     {
       "timestamp": "2024-05-27T00:00:00Z",
