@@ -1,3 +1,12 @@
+2024-06-09T00:39:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9432660367 # 321
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-09
+* notice: last 14d: unq all: 4 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 667 1137 / 680 1151
+* notice: next accum: outdated-unq outdated-all / unq all: 668 1139 / 680 1151
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
+* notice: removed / changed dates: [2024-05-25] / [2024-05-26]
+
 2024-06-08T00:35:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9424740016 # 320
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-08
